hotfix done on user controller
